# embedding-inference

./: .env.example  README.md  api.py  config.py  data_models.py  embedding.py  install_embedding.sh  pyproject.toml  requirements.txt  setup_embedding.py  start_embedding.sh
